Fix color visibility

--- a/src/styles/titlebar.css
+++ b/src/styles/titlebar.css
@@ -31,7 +31,7 @@
 
 .titlebar-minimize svg, .titlebar-resize svg, .titlebar-close svg {
     fill: rgba(255, 255, 255, .5);
-    margin-top: 1px;
+    margin-top: 2px;
     width: 10px;
     height: 10px;
     shape-rendering: crispEdges;
